fixed left wordballoon alignment, for real

--- a/src/less/batslap.less
+++ b/src/less/batslap.less
@@ -10,7 +10,7 @@
   }
 
   span.wordballoon-rbn {
-    left: 0;
+    left: 4px;
     width: 316px;
     height: 236px;
   }
@@ -66,7 +66,7 @@
   }
 
   span.wordballoon-rbn {
-    left: 4px;
+    left: 2px;
     width: 158px;
     height: 118px;
     background-size: 158px 118px;
